vlib/v/checker/tests/assing_none.out
vlib/v/checker/tests/assing_none.vv:2:9: error: you can not assign a `none` value to a variable
    1 | fn main() {
    2 |     val := none
      |            ~~~~
    3 |     println(val)
    4 | }
